# yeaboi.ai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  TELEMETRY.md  TODO.md  pyproject.toml  skills
.archon/: README.md  config.yaml
.archon/workflows/: aim-idea-to-pr.yaml  aim-pr-review.yaml
.claude/: launch.json  settings.json
.claude/agents/: code-reviewer.md  code-simplifier.md  codebase-analyst.md  codebase-explorer.md  migrator.md  pr-fixer.md  pr-test-analyzer.md  silent-failure-hunter.md  test-writer.md  web-researcher.md
.claude/commands/: babysit-prs.md  cross-review.md  migrate.md  review-pr.md  ship.md  sync-main.md  wt.md
.claude/skills/agent-and-state/: SKILL.md
.claude/skills/archon-dev/: SKILL.md
.claude/skills/ci-and-release/: SKILL.md
.claude/skills/logging/: SKILL.md
.claude/skills/mode-blueprints/: SKILL.md
.claude/skills/project-map/: SKILL.md
.claude/skills/rust-tauri/: SKILL.md
.claude/skills/tui-standards/: SKILL.md
.github/: dependabot.yml
.github/workflows/: auto-version.yml  backlog-groomer.yml  ci-sentinel.yml  ci.yml  claude-code-review.yml  claude-review.yml  claude.yml  dependabot-auto.yml  feedback-remediation.yml  flaky-test-hunter.yml  publish.yml  security-scan.yml  smoke.yml
automation/feedback_remediation/: README.md  github_io.py  test_triage.py  triage.py
claude-plugin/.claude-plugin/: marketplace.json
claude-plugin/yeaboi/: .mcp.json  README.md
claude-plugin/yeaboi/.claude-plugin/: plugin.json
crates/aim-agent/: Cargo.toml
crates/aim-agent/src/: lib.rs
crates/aim-cli/: Cargo.toml
crates/aim-cli/src/: main.rs
crates/aim-core/: Cargo.toml
crates/aim-core/src/: lib.rs
crates/aim-exec/: Cargo.toml
crates/aim-exec/src/: lib.rs
crates/aim-git/: Cargo.toml
crates/aim-git/src/: lib.rs
crates/aim-proc/: Cargo.toml
crates/aim-proc/src/: lib.rs
crates/aim-worktree/: Cargo.toml
crates/aim-worktree/src/: lib.rs
crates/yb-agent/: Cargo.toml
crates/yb-agent/src/: extract.rs  lib.rs  model.rs  orchestrator.rs  provider.rs
crates/yb-cli/: Cargo.toml
crates/yb-cli/src/: main.rs
crates/yb-core/: Cargo.toml
crates/yb-core/src/: engine.rs  fswatch.rs  lib.rs  project.rs  util.rs
crates/yb-core/src/adapters/: claude.rs  codex.rs  mod.rs
crates/yb-core/src/model/: mod.rs  windows.rs
crates/yb-exec/: Cargo.toml
crates/yb-exec/src/: lib.rs
crates/yb-git/: Cargo.toml
crates/yb-git/src/: gh.rs  git.rs  lib.rs  types.rs
crates/yb-proc/: Cargo.toml
crates/yb-proc/src/: actions.rs  fswatch.rs  lib.rs  ports.rs
crates/yb-worktree/: Cargo.toml
crates/yb-worktree/src/: branch.rs  config.rs  engine.rs  lib.rs  ports.rs
desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/e2e/: smoke.spec.ts
desktop/src/: App.test.tsx  App.tsx  index.css  test-setup.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: app-shell.tsx  banner.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  monitor.test.tsx  monitor.tsx  port-chips.tsx  pr-view.test.tsx  pr-view.tsx  review-panel.test.tsx  review-panel.tsx  session-detail.test.tsx  session-detail.tsx  (+7 more)
docs/: CNAME  index.html
docs/assets/: landing.css  site.css  site.js
docs/docs/: architecture.html  cli-reference.html  deployment.html  development.html  getting-started.html  index.html  integrations-exports.html  scrum-standards.html  session-management.html  tools.html
packaging/scrum-agent-shim/: README.md  pyproject.toml
scripts/: bump_version.py  generate_graph_png.py  serve_docs.py  w.sh  wt-list.sh  wt.sh
scripts/claude-hooks/: format-file.sh  verify-stop.sh
src/scrum_agent/: __init__.py  cli.py  config.py  formatters.py  html_exporter.py  input_guardrails.py  music.py  paths.py  questionnaire_io.py  sessions.py  setup_wizard.py  team_profile_exporter.py  telemetry.py  voice.py
src/yeaboi/: __init__.py  azdevops_sync.py  changelog.py  changelog_data.json  charts.py  cli.py  clipboard.py  config.py  export_targets.py  feedback.py  formatters.py  html_exporter.py  input_guardrails.py  jira_sync.py  json_exporter.py  logging_setup.py  markdown_convert.py  music.py  ollama_control.py  output_guardrails.py  paths.py  persistence.py  questionnaire_io.py  sessions.py  setup_wizard.py  team_profile.py  team_profile_exporter.py  telemetry.py  update_check.py  usage_export.py  voice.py
tests/: _node_helpers.py  test_accordion.py  test_mode_select.py  test_persistence.py  test_session.py  test_splash.py
tests/contract/: test_azure_devops_contract.py  test_confluence_contract.py  test_github_contract.py  test_jira_contract.py  test_llm_provider_contract.py  test_notion_contract.py  test_schema_validation.py
tests/fixtures/: scrum-questionnaire-answers.md
tests/golden/: datasets.py  test_golden.py
tests/integration/: conftest.py  test_cli.py  test_e2e_graph.py  test_e2e_repl.py  test_graph.py  test_graph_topology.py  test_integration.py  test_react_loop.py  test_repl.py  test_sessions.py  test_tui_smoke.py
tests/smoke/: test_smoke.py
tests/unit/: test_ai_usage.py  test_analysis_engine.py  test_analysis_generation.py  test_analysis_regen_feedback.py  test_analysis_screens.py  test_analysis_sessions.py  test_anonymize.py  test_anonymize_apply.py  test_anonymize_screens.py  test_attachments.py  test_azdevops_sync.py  test_azure_devops.py  test_bump_version.py  test_changelog.py  test_changelog_screen.py  test_charts.py  test_claude_plugin.py  test_cli_subcommands.py  test_clipboard.py  test_config.py  test_copy_clipboard.py  test_doc_quality.py  test_export_picker.py  test_export_targets.py  test_feedback.py  test_feedback_screen.py  test_fixtures.py  test_formatters.py  test_headless_pipeline.py  test_html_exporter.py  test_input_raw_mode.py  test_install_skill.py  test_jira_sync.py  test_json_exporter.py  test_llm.py  test_logging_setup.py  test_markdown_convert.py  test_mcp_sampling.py  test_mcp_server.py  test_music.py  (+65 more)
(+369 files in other folders)
