[workspace]
resolver = "2"
members = [
    "crates/aim-core",
    "crates/aim-proc",
    "crates/aim-exec",
    "crates/aim-git",
    "crates/aim-worktree",
    "crates/aim-agent",
    "crates/aim-cli",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["dinho"]
rust-version = "1.85"

[workspace.dependencies]
# internal crates
aim-core = { path = "crates/aim-core" }
aim-proc = { path = "crates/aim-proc" }
aim-exec = { path = "crates/aim-exec" }
aim-git = { path = "crates/aim-git" }
aim-worktree = { path = "crates/aim-worktree" }
aim-agent = { path = "crates/aim-agent" }

# external (shared, pinned once for the whole workspace)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
