[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yeaboi"
version = "2.8.3"
description = "yeaboi.ai — a team lead's best friend. A terminal AI agent that decomposes projects into epics, user stories, tasks, and sprint plans."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Omar Din"}]
license = {text = "MIT"}
keywords = ["yeaboi", "team-lead", "scrum", "agile", "ai", "project-planning", "jira", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langchain",
    "langgraph",
    # LLM provider integrations — langchain-anthropic is the default.
    # langchain-openai and langchain-google-genai are optional; they are
    # lazy-imported in llm.py and only needed when LLM_PROVIDER is set to
    # "openai" or "google". Install all with: uv sync --extra all-providers
    "langchain-anthropic",
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "PyGithub",
    "azure-devops",
    "jira",
    "atlassian-python-api",
    # Notion doc tools (tools/notion.py) — official SDK, mirrors how Confluence
    # uses atlassian-python-api. Notion has its own integration token (NOTION_TOKEN).
    "notion-client",
    # SQLite-backed checkpoint store for Phase 8 session persistence.
    # SqliteSaver is used as a standalone store; the graph itself stays
    # stateless for now (Phase 8B wires it as a full LangGraph checkpointer).
    "langgraph-checkpoint-sqlite",
    # Bank/public holiday detection by country — used by detect_bank_holidays tool
    # to auto-populate capacity deductions during intake.
    "holidays",
    # Pure-python QR generator (no deps) — used to render the Retro "invite" QR
    # (retro/server.py:/api/qr) so teammates can scan to join. Offline, no CDN.
    "segno",
]

[project.optional-dependencies]
openai = ["langchain-openai"]
google = ["langchain-google-genai"]
pdf = ["pymupdf"]
bedrock = ["langchain-aws", "boto3"]
# Voice input — record mic audio (sounddevice) and transcribe locally and
# offline with faster-whisper. Lazy-imported in voice.py; needs no API key
# (works with any LLM provider). The sounddevice wheels bundle PortAudio on
# macOS/Windows (self-contained); Linux also needs the system lib
# (`apt install libportaudio2`). A Whisper model downloads once on first use.
voice = ["sounddevice", "faster-whisper"]
all-providers = ["langchain-openai", "langchain-google-genai", "langchain-aws", "boto3"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-recording",
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://yeaboi.ai"
Repository = "https://github.com/omardin14/yeaboi.ai"
Issues = "https://github.com/omardin14/yeaboi.ai/issues"

[project.scripts]
yeaboi = "yeaboi.cli:main"
# Back-compat alias (one release) — existing installs / the standup scheduler
# may still reference the old command name.
scrum-agent = "yeaboi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yeaboi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that compile the graph or run multi-node flows (skip with: -m 'not slow')",
    "eval: golden dataset evaluators (run with: make eval)",
    "vcr: contract tests using recorded API responses (run with: make record to re-record)",
    "smoke: live API smoke tests requiring real credentials (run with: make smoke-test)",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# page.py is an embedded front-end asset (inline HTML/CSS/JS in string constants);
# line length carries no meaning there, so exempt it from E501 only.
"src/yeaboi/retro/page.py" = ["E501"]
# presentation.py is an embedded slide-deck asset (inline HTML/CSS/JS string constants).
"src/yeaboi/reporting/presentation.py" = ["E501"]

[dependency-groups]
dev = [
    "syrupy>=5.1.0",
]
