[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yeaboi"
version = "2.34.0"
description = "yeaboi.ai — a team lead's best friend. A terminal AI agent that decomposes projects into epics, user stories, tasks, and sprint plans."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Omar Din"}]
license = {text = "MIT"}
keywords = ["yeaboi", "team-lead", "scrum", "agile", "ai", "project-planning", "jira", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langchain",
    "langgraph",
    # LLM provider integrations — langchain-anthropic is the default.
    # langchain-openai and langchain-google-genai are optional; they are
    # lazy-imported in llm.py and only needed when LLM_PROVIDER is set to
    # "openai" or "google". Install all with: uv sync --extra all-providers
    "langchain-anthropic",
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "PyGithub",
    "azure-devops",
    "jira",
    "atlassian-python-api",
    # Notion doc tools (tools/notion.py) — official SDK, mirrors how Confluence
    # uses atlassian-python-api. Notion has its own integration token (NOTION_TOKEN).
    "notion-client",
    # SQLite-backed checkpoint store for Phase 8 session persistence.
    # SqliteSaver is used as a standalone store; the graph itself stays
    # stateless for now (Phase 8B wires it as a full LangGraph checkpointer).
    "langgraph-checkpoint-sqlite",
    # Bank/public holiday detection by country — used by detect_bank_holidays tool
    # to auto-populate capacity deductions during intake.
    "holidays",
    # Pure-python QR generator (no deps) — used to render the Retro "invite" QR
    # (retro/server.py:/api/qr) so teammates can scan to join. Offline, no CDN.
    "segno",
]

[project.optional-dependencies]
openai = ["langchain-openai"]
google = ["langchain-google-genai"]
pdf = ["pymupdf"]
# Word/PowerPoint roadmap ingestion — lazy-imported in roadmap/ingest.py so the
# Roadmap intake card can read .docx/.pptx quarterly roadmaps. Optional because
# most users point at Confluence/Notion/markdown instead.
docs = ["python-docx", "python-pptx"]
bedrock = ["langchain-aws", "boto3"]
# Local LLM via an Ollama server — free, private, no API key. See README:
# "Local Mode (Ollama)".
ollama = ["langchain-ollama"]
# Voice input — record mic audio (sounddevice) and transcribe locally and
# offline with faster-whisper. Lazy-imported in voice.py; needs no API key
# (works with any LLM provider). The sounddevice wheels bundle PortAudio on
# macOS/Windows (self-contained); Linux also needs the system lib
# (`apt install libportaudio2`). A Whisper model downloads once on first use.
voice = ["sounddevice", "faster-whisper"]
# Chart images embedded in exports (velocity / delivered-work PNGs). Lazy-
# imported in charts.py — without the extra, exports simply skip the charts.
charts = ["matplotlib>=3.8"]
# MCP server — expose yeaboi's modes as tools to AI coding agents
# (Claude Code, Cursor, Codex CLI, VS Code, …). Official python-sdk, v1 line;
# v2 is a pre-release with breaking API changes, so the <2 pin is load-bearing.
mcp = ["mcp>=1.9,<2"]
all-providers = ["langchain-openai", "langchain-google-genai", "langchain-aws", "boto3", "langchain-ollama"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-recording",
    "ruff",
    "pre-commit",
    # so CI exercises the chart-generation tests
    "matplotlib>=3.8",
    # so CI exercises the MCP server tests
    "mcp>=1.9,<2",
]

[project.urls]
Homepage = "https://yeaboi.ai"
Repository = "https://github.com/omardin14/yeaboi.ai"
Issues = "https://github.com/omardin14/yeaboi.ai/issues"

[project.scripts]
yeaboi = "yeaboi.cli:main"
# Back-compat alias (one release) — existing installs / the standup scheduler
# may still reference the old command name.
scrum-agent = "yeaboi.cli:main"
# MCP stdio server (requires the [mcp] extra):
#   uvx --from 'yeaboi[mcp]' yeaboi-mcp
yeaboi-mcp = "yeaboi.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yeaboi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that compile the graph or run multi-node flows (skip with: -m 'not slow')",
    "eval: golden dataset evaluators (run with: make eval)",
    "vcr: contract tests using recorded API responses (run with: make record to re-record)",
    "smoke: live API smoke tests requiring real credentials (run with: make smoke-test)",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
# "S" = flake8-bandit security rules (SAST). See `make security`.
select = ["E", "F", "I", "N", "W", "UP", "S"]
# High-noise bandit rules that don't map to real vulnerabilities in this codebase
# (audited): every subprocess call uses list-form argv (never shell=True), CLI
# tools are intentionally resolved via PATH, and the try/except-pass sites are
# best-effort cleanup. Suppressed globally so the signal-bearing S-rules (S104,
# S105, S310, S311, S608) stay actionable rather than drowned in style noise.
ignore = [
    "S101",  # assert — used for internal invariants, stripped only under -O (not shipped that way)
    "S110",  # try-except-pass — deliberate best-effort cleanup
    "S112",  # try-except-continue — deliberate best-effort skip
    "S603",  # subprocess-without-shell — all calls are argv lists, never shell=True (audited)
    "S607",  # partial-executable-path — git/osascript/sudo/crontab resolved via PATH by design
]

[tool.ruff.lint.per-file-ignores]
# page.py is an embedded front-end asset (inline HTML/CSS/JS in string constants);
# line length carries no meaning there, so exempt it from E501 only. S608 fires on
# a JS string that merely resembles SQL — there is no database here.
"src/yeaboi/retro/page.py" = ["E501", "S608"]
# presentation.py is an embedded slide-deck asset (inline HTML/CSS/JS string constants).
"src/yeaboi/reporting/presentation.py" = ["E501"]
# Tests deliberately use asserts, toy secrets, temp paths, and localhost URLs —
# they are never shipped, so the bandit (S) category is not meaningful here.
"tests/**" = ["S"]

[dependency-groups]
dev = [
    "syrupy>=5.1.0",
]
