[package]
name = "yb-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "yeaboi.ai agent providers + review orchestrator"

[dependencies]
yb-exec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { version = "12.0.1", optional = true }

[features]
# ts-rs derives for TypeScript bindings (binding generation only).
ts = ["dep:ts-rs"]
