[package]
name = "yb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "yeaboi.ai headless CLI"

[[bin]]
name = "yeaboi"
path = "src/main.rs"

[dependencies]
yb-core = { workspace = true }
yb-proc = { workspace = true }
yb-git = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
