[package]
name = "yb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "yeaboi.ai core domain model and collectors (presentation-agnostic)"

[dependencies]
serde = { workspace = true }
ts-rs = { version = "12.0.1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Enables ts-rs derives so we can generate TypeScript bindings. Off by default
# (and never enabled by the CLI) so the headless build stays lean.
ts = ["dep:ts-rs"]
