[package]
name = "yb-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "yeaboi.ai typed git/gh wrappers"

[dependencies]
yb-exec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { version = "12.0.1", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Enables ts-rs derives for TypeScript bindings (binding generation only).
ts = ["dep:ts-rs"]
