[package]
name = "yb-proc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "yeaboi.ai process table, ports, and signals"

[dependencies]
yb-core = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
