[package]
name = "yeaboi-desktop"
version = "0.0.0"
description = "yeaboi.ai desktop app (Tauri shell over the yb-* engine)"
authors = ["dinho"]
edition = "2021"

[lib]
# Keep the `_lib` suffix (unique vs the bin name; required on Windows).
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
yb-core = { workspace = true }
